max-width overflow fix try

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -17,6 +17,7 @@ body {
   flex-direction: column;
   align-items: center;
 
+  max-width: 100vw;
   overflow-x: hidden;
 
   @include media('>=large') {
